# Language

./: .gitignore  CMakeLists.txt  Makefile  README.md  Syntax  a.out  dump  launch  launch.cpp  out.txt  test.s
Code/: FUCK  asm  ast  ast2  bin  binary  code  code copy  fuck  fuck.asm  lang  quad
Libs/: keywords  operators
Libs/AST/: ast_comp.cpp  ast_comp.h  ast_main.cpp
Libs/ASTLang/: ast_tl_main.cpp  ast_to_lang.cpp  ast_to_lang.h
Libs/Asm/: asm_comp.cpp  asm_comp.h  asm_main.cpp
Libs/BinaryTree/: bin_tree.cpp  bin_tree.h  bin_tree_config.h
Libs/CPU/: README.md  asm.cpp  commands  cpu.cpp  cpu_config.h  debug_lib.h
Libs/CPU/stack/: print_func.cpp  stack.cpp  stack.h  stack_config.h
Libs/CPU/string_lib/: string_lib.h
Libs/Debug/: debug_lib.h
Libs/LexemAnalyzer/: lex_anal.cpp  lex_anal.h
Libs/LexemAnanalyzer/: lex_anal.cpp  lex_anal.h
Libs/List/: list.h  list_config.h
Libs/Tokens/: tokens.cpp  tokens.h  tokens_config.h
code/: asm  asm_log  ast  code  codeforlang  factorial.asm  quad
src/: scan.asm
src/ASM/: asm_comp.cpp  asm_comp.h  asm_main.cpp
src/ASMFuncs/: hex_dump.py  print.asm  scan.asm
src/AST/: ast_comp.cpp  ast_main.cpp
src/Asm/: asm_comp.h
src/BinaryTree/: bin_tree.cpp  bin_tree.h
src/ELF/: elf_gen.cpp  elf_gen.h
src/LexemAnalyzer/: lex_anal.cpp
src/List/: list.cpp  list.h  list_config.h
src/NASMScripts/: print.asm  scan.asm  test
src/Tokens/: tokens.h
